--- a/app/src/main/res/layout/activity_datasecurity.xml
+++ b/app/src/main/res/layout/activity_datasecurity.xml
@@ -53,7 +53,7 @@
                 android:id="@+id/question_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="1. How does SmartStackBills protect my data?"
+                android:text="1. How does SmartStack Solutions protect my data?"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -64,7 +64,7 @@
                 android:id="@+id/answer_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: SmartStackBills implements essential security measures to protect your data. This includes encrypting data in transit, secure login protocols, and basic access controls. We rely on trusted cloud services to store and manage data securely."
+                android:text="Answer: SmartStack Solutions implements security measures to protect your data. This includes secure login protocols, and basic access controls. We rely on trusted cloud services to store and manage data securely."
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -86,7 +86,7 @@
                 android:id="@+id/answer_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: SmartStackBills does not store any payment information. The app is designed for users to manually input financial data without the need for payment transactions."
+                android:text="Answer: SmartStack Solutions is designed for users to manually input financial data without the need for payment transactions."
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -130,7 +130,7 @@
                 android:id="@+id/answer_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: To prevent unauthorized access, SmartStackBills uses strong password requirements and session management protocols. We also recommend users to regularly update their passwords and to avoid sharing their login credentials."
+                android:text="Answer: To prevent unauthorized access, SmartStack Solutions uses strong password requirements and session management protocols. We also recommend users to regularly update their passwords and to avoid sharing their login credentials."
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -141,7 +141,7 @@
                 android:id="@+id/question_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="5. How does SmartStackBills ensure the integrity of my data?"
+                android:text="5. How does SmartStack Solutions ensure the integrity of my data?"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -185,7 +185,7 @@
                 android:id="@+id/question_7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="7. How can I enhance my own security while using SmartStackBills?"
+                android:text="7. How can I enhance my own security while using SmartStack Solutions?"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -196,7 +196,7 @@
                 android:id="@+id/answer_7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: Enhance your security by using a strong, unique password for your SmartStackBills account. Ensure your device is protected with a password or biometric lock, and avoid using public Wi-Fi when accessing the app."
+                android:text="Answer: Enhance your security by using a strong, unique password for your SmartStack Solutions account. Ensure your device is protected with a password or biometric lock, and avoid using public Wi-Fi when accessing the app."
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -207,7 +207,7 @@
                 android:id="@+id/question_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="8. Does SmartStackBills comply with data protection regulations?"
+                android:text="8. Does SmartStack Solutions comply with data protection regulations?"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
@@ -217,7 +217,7 @@
                 android:id="@+id/answer_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Answer: Yes, SmartStackBills complies with relevant data protection regulations. We are committed to protecting your privacy and ensuring compliance with applicable laws."
+                android:text="Answer: Yes, SmartStack Solutions complies with relevant data protection regulations. We are committed to protecting your privacy and ensuring compliance with applicable laws."
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_dark"
@@ -228,7 +228,7 @@
                 android:id="@+id/question_9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="9. What kind of encryption does SmartStackBills use?"
+                android:text="9. What kind of encryption does SmartStack Solutions use?"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:background="@drawable/nav_item_background_light"
