ad added w/o approval - not tested yet

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -486,6 +486,17 @@
                 android:layout_marginBottom="16dp"
                 android:contentDescription="@string/create_new_Open_Payment" />
 
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                app:adSize="BANNER"
+                app:adUnitId="ca-app-pub-8302603162293293/1778340932">
+            </com.google.android.gms.ads.AdView>
+
             <!-- Bottom Navigation View -->
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigationView"
