--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -407,7 +407,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
-                android:inputType="none"
+                android:inputType="numberDecimal"
                 android:focusable="false"
                 android:hint="+0.00"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -465,7 +465,7 @@
                 android:text=""
                 android:layout_marginTop="4dp"
                 android:textSize="14sp"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/holo_orange_dark"
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/progressBarSavings"
                 app:layout_constraintStart_toStartOf="parent"
